[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Enemy_parent.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Resources/audio/weapon_attack/gunshot_1.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/audio/movement_sounds/plague_doc_footsteps_2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/audio/movement_sounds/plague_doc_footsteps_3.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Characters/Misc/Enemy_HP_Under.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Characters/Misc/Enemy_HP_Upper.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Img/Icons/detect_alert.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shoot"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_check_player_status"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Audio/Attack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="Animation" id=2]
resource_name = "damaged"

[sub_resource type="Animation" id=3]
resource_name = "death"

[sub_resource type="Animation" id=4]
resource_name = "idle"

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Audio/SFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.4, 0.8 )
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "damaged"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachine" id=21]
states/attack/node = SubResource( 6 )
states/attack/position = Vector2( -54.577, 58 )
states/damaged/node = SubResource( 7 )
states/damaged/position = Vector2( 148.423, -272 )
states/death/node = SubResource( 8 )
states/death/position = Vector2( 183.423, -40 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( -220.577, -75 )
states/walk/node = SubResource( 10 )
states/walk/position = Vector2( -121.577, -357 )
transitions = [ "idle", "damaged", SubResource( 11 ), "damaged", "death", SubResource( 12 ), "idle", "attack", SubResource( 13 ), "attack", "idle", SubResource( 14 ), "idle", "walk", SubResource( 15 ), "walk", "idle", SubResource( 16 ), "damaged", "idle", SubResource( 28 ), "attack", "damaged", SubResource( 29 ), "walk", "damaged", SubResource( 30 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( -521.577, -427 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 10.3548, 11.5432 )

[sub_resource type="Animation" id=24]
length = 0.26
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AlertSign:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 112, 32 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 160, 30 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 372.567, 29 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10, -20, 20, -20, 20, 20, -20, 20, -20, -20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/damaged = SubResource( 2 )
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )

[node name="EnemyHitBox" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="EnemyHitBox"]
visible = false
shape = SubResource( 23 )

[node name="Enemy_HP_Under" parent="." instance=ExtResource( 6 )]

[node name="Enemy_HP_Upper" parent="." instance=ExtResource( 7 )]

[node name="Audio" type="Node2D" parent="."]

[node name="SFX" type="AudioStreamPlayer2D" parent="Audio"]
bus = "SFX"

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
bus = "Death"

[node name="Stepps" type="AudioStreamPlayer2D" parent="Audio"]
bus = "Stepps"

[node name="Attack" type="AudioStreamPlayer2D" parent="Audio"]
bus = "SFX"

[node name="Alert" type="Node2D" parent="."]
position = Vector2( 0, -60 )
__meta__ = {
"_edit_group_": true
}

[node name="AlertPlayer" type="AnimationPlayer" parent="Alert"]
anims/alert = SubResource( 24 )

[node name="AlertSign" type="Sprite" parent="Alert"]
position = Vector2( 0, 15 )
texture = SubResource( 25 )
vframes = 2
hframes = 7

[node name="AlertFadeTimer" type="Timer" parent="Alert"]
wait_time = 0.5
one_shot = true

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2( 128, 0 )
shape = SubResource( 26 )

[node name="Timers" type="Node2D" parent="."]

[node name="MovementChangeTimer" type="Timer" parent="Timers"]
wait_time = 4.0
autostart = true

[node name="StaggerTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="ChasingRange" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingRange"]
position = Vector2( 0, -2 )
shape = SubResource( 27 )

[connection signal="area_entered" from="EnemyHitBox" to="." method="_on_EnemyHitBox_entered"]
[connection signal="timeout" from="Alert/AlertFadeTimer" to="." method="_on_AlertFadeTimer_timeout"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_exited"]
[connection signal="timeout" from="Timers/MovementChangeTimer" to="." method="_on_MovementChangeTimer_timeout"]
[connection signal="timeout" from="Timers/StaggerTimer" to="." method="_on_StaggerTimer_timeout"]
